# backcel

./: .gitignore  DATA.md  DEV.md  LICENSE  README.md  backtest_bt.py  backtest_notebook.py  build.ps1  iframe_test.py  main.py  pyproject.toml  test.ps1  test1.py  widget_test.py
.github/workflows/: deploy.yml
public/: pyproject.toml
public/example/: assets.xlsx  currencies.xlsx  indices.xlsx  main.xlsx
public/src/: backtest.py  bt_backtest.py  bt_report.py  data_clean.py  data_load.py  data_load_main.py  data_validation.py  eff_front.py  main.py  monitor.py  native_report.py  report.py  result.py  wasm_folder.py
public/tests/: case_simple.xlsx  test_backtest.py  test_full_file.py
public/tests/data/: test_prices_sheet.xlsx  test_rb.xlsx  test_rb_full.xlsx  test_rb_sigma.xlsx  test_simple.xlsx
