[project]
name = "portfolio-notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anywidget>=0.10.0",
    "bt>=1.1.5",
    "jinja2>=3.1.6",
    "marimo>=0.23.1",
    "nbformat>=5.10.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "pyportfolioopt>=1.6.0",
    "pywin32>=311; sys_platform == 'win32'",
    "quantstats>=0.0.81",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
norecursedirs = ["publish", "dist", "build", ".*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
