[project]
name = "portfolio-logic"
version = "0.1.0"
description = "Custom backtesting logic for my portfolio"
dependencies = [] # Keep empty; main deps are in the notebook metadata
requires-python = ">=3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# This satisfies the requirement for a defined selection option
# while allowing us to manually structure the wheel
bypass-selection = true

[tool.hatch.build.targets.wheel.force-include]
# Local Path = Path inside the Wheel
"./src" = "public/src"
"./__init__.py" = "public/__init__.py"